--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       - COMPOSE_PROJECT_NAME=npi
     ports:
       - 5755:5755
+    restart: always
     volumes:
     # - db1:/app/db
       - ".:/app"
