--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   npiapp:
     container_name: npiapp
-    image: omzig7/npi:selfhost14
+    image: omzig7/npi:selfhost15
     environment:
       - PYTHONUNBUFFERED=1
       - COMPOSE_PROJECT_NAME=npi
@@ -14,3 +14,6 @@ services:
       - type: bind
         source: N:\Projects\db
         target: /app/db
+      - type: bind
+        source: N:\Projects\npi-selfhost\print.log
+        target: /app/print.log
